--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,45 @@
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+*.egg-info/
+dist/
+build/
+
+# Virtual environments
+venv/
+env/
+ENV/
+
+# Models and large files
 models/
-merged_model/
+*.safetensors
+*.bin
+*.gguf
+
+# Data and uploads
+backend/uploads/
+backend/data/output.json
+backend/data/*.jsonl
+
+# Frontend
+frontend/node_modules/
+frontend/dist/
+frontend/.vite/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Environment variables
+.env
+.env.local
